--- a/style.css
+++ b/style.css
@@ -3,10 +3,19 @@
 * {
 	margin:0; padding:0;
 	line-height:1.5;
-	color:#222222;
+	background-color:#999999;
 } 
 
-body {
-	background-color:#999999;
+body{
 	text-align:center;
+	font-size: large;
+	color:#ffffff;
+}
+
+h1{
+	padding:10;
+	width:100%;
+	background-color:#01A9DB;
+	text-align:center;
+	
 }
