--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body{
+	width:75%;
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
@@ -20,10 +21,8 @@ h1{
 }
 
 
-
-
-
 @media only screen and (max-device-width: 720px) {
+	
 * {
 	margin:0; padding:0;
 	line-height:1.5;
@@ -41,5 +40,6 @@ h1{
 	width:100%;
 	background-color:#01A9DB;
 	text-align:center;	
-}	
+}
+	
 }
