--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
 	margin:0; padding:0;
 	line-height:1.5;
-	background-color:#666666;
+	background-color:#2a2a2a;
 }
 
 @media only screen and (min-device-width: 641px) {
