--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
+	background-color:#404040;
 }
 
 h1{
@@ -31,6 +32,7 @@ body{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
+	background-color:#404040;
 }
 
 h1{
