--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 @charset "utf-8";
 
+body{
+	background-color:#2a2a2a;
+}
+
+
 
 @media only screen and (min-device-width: 641px) {
 
-body{
+main{
 	margin:0 auto;
 	width:60%;
 	text-align:center;
@@ -22,7 +27,7 @@ h1{
 
 @media only screen and (max-device-width: 640px) {
 
-body{
+main{
 	width:100%;
 	text-align:center;
 	font-size: large;
