--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body{
 	background-color:#404040;
 }
 
+table#header{
+	width:100%;
+	text-align: center;
+}
+
 
 
 @media only screen and (min-device-width: 641px) {
