--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ table#head{
 	border-collapse: collapse;
 	border-spacing: 0;	
 }
-
+tr#head{
+	background-color:#0080FF;
+}
+tr#link{
+	background-color:#050505;
+}
 
 
 @media only screen and (min-device-width: 641px) {
@@ -20,7 +25,7 @@ main{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
-	background-color:#2a2a2a;
+	background-color:#303030;
 }
 
 h1{
@@ -47,7 +52,7 @@ main{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
-	background-color:#2a2a2a;
+	background-color:#303030;
 }
 
 h1{
