--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body{
-	background-color:#404040;
+	background-color:#080808;
 }
 
 table#head{
@@ -14,7 +14,7 @@ tr.head{
 	height: 150px;
 }
 tr.link{
-	background-color:#050505;
+	background-color:#2a2a2a;
 }
 
 
@@ -26,7 +26,7 @@ main{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
-	background-color:#303030;
+	background-color:#404040;
 }
 
 h1{
@@ -53,7 +53,7 @@ main{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
-	background-color:#303030;
+	background-color:#404040;
 }
 
 h1{
