--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@ body{
 	background-color:#888888;
 }
 
+main{
+	text-align:center;
+	font-size: large;
+	color:#ffffff;
+	background-color:#404040;
+}
+
+
+
+
+
 table#head{
 	width:100%;
 	border-collapse: collapse;
@@ -23,10 +34,6 @@ tr.link{
 main{
 	margin:0 auto;
 	width:60%;
-	text-align:center;
-	font-size: large;
-	color:#ffffff;
-	background-color:#404040;
 }
 
 h1{
@@ -50,10 +57,6 @@ h2{
 
 main{
 	width:100%;
-	text-align:center;
-	font-size: large;
-	color:#ffffff;
-	background-color:#404040;
 }
 
 h1{
