--- a/style.css
+++ b/style.css
@@ -11,19 +11,16 @@ main{
 	background-color:#404040;
 }
 
-
-
-
-
 table#head{
 	width:100%;
 	border-collapse: collapse;
 	border-spacing: 0;	
 }
+
 tr.head{
 	background-color:#0080FF;
-	height: 150px;
 }
+
 tr.link{
 	background-color:#151515;
 }
@@ -36,12 +33,22 @@ main{
 	width:60%;
 }
 
+tr.head{
+	height:150px;
+}
+	
+tr.link{
+	height:50px;
+}	
+	
+	
 h1{
 	padding:5;
 	width:100%;
 	background-color:#00BFFF;
 	text-align:center;	
 }
+	
 h2{
 	padding:20;
 	width:100%;
@@ -57,6 +64,14 @@ h2{
 
 main{
 	width:100%;
+}
+	
+tr.head{
+	height:100px;
+}
+	
+tr.link{
+	height:35px;
 }
 
 h1{
