--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 @charset "utf-8";
 
 body{
-	background-color:#dddddd;
+	background-color:#bbbbbb;
 }
 main{
 	text-align:center;
 	font-size: large;
 	color:#ffffff;
-	background-color:#888888;
+	background-color:#666666;
 }
 
 table#head{
