--- a/style.css
+++ b/style.css
@@ -41,20 +41,13 @@ tr.link{
 }	
 	
 	
-h1{
+div{
+	height:35px;
 	padding:5;
 	width:100%;
-	background-color:#00BFFF;
-	text-align:center;	
-}
-	
-h2{
-	padding:20;
-	width:100%;
-	background-color:#2ECCFA;
+	background-color:#0080FF;
 	text-align:center;	
 }	
-	
 	
 	
 }
@@ -73,16 +66,11 @@ tr.link{
 	height:35px;
 }
 
-h1{
+div{
+	height:35px;
 	padding:5;
 	width:100%;
-	background-color:#00BFFF;
-	text-align:center;	
-}
-h2{
-	padding:20;
-	width:100%;
-	background-color:#2ECCFA;
+	background-color:#0080FF;
 	text-align:center;	
 }
 	
