--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ div#foot{
 	height:35px;
 	padding:5;
 	width:100%;
-	background-color:#0080FF;
+	background-color:#303030;
 	text-align:center;	
 }
 
