--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body{
 	background-color:#bbbbbb;
-	font-family:'ＭＳ Ｐゴシック',monospace;
+	font-family:sans-serif,monospace;
 }
 main{
 	text-align:left;
