--- a/style.css
+++ b/style.css
@@ -19,9 +19,10 @@ tr.head{
 	background-color:#0080FF;
 }
 td.head{
-	text-align:left;
 	padding:20px;
+	text-align:left;
 	font-size:72px;
+	font-weight: bolder;
 }
 tr.link{
 	height:35px;
