--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main{
 	color:#ffffff;
 	background-color:#666666;
 }
-table#head{
+table#max{
 	width:100%;
 	border-collapse:collapse;
 	border-spacing:0;	
