--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ table#max{
 	border-collapse:collapse;
 	border-spacing:0;	
 }
-table#pc_content{
+table#pc_contents{
 	width:100%;
 	border-collapse:collapse;
 	border-spacing:0;	
@@ -59,7 +59,7 @@ tr.head{
 main{
 	width:100%;
 }
-table#pc_content{
+table#pc_contents{
 	display: none;	
 }
 tr.head{
