--- a/style.css
+++ b/style.css
@@ -61,6 +61,12 @@ main{
 table#phone_contents{
 	display: none;	
 }
+table#profile{
+	width:100%;
+	border-collapse:collapse;
+	border-spacing:0;
+	text-align:left;
+}
 tr.head{
 	height:150px;
 }
