--- a/style.css
+++ b/style.css
@@ -28,10 +28,6 @@ table#phone_contents{
 tr.head{
 	background-color:#0080FF;
 }
-tr.profile{
-	width="100%"
-	text-align:left;
-}
 td.head{
 	padding:20px;
 	text-align:left;
@@ -41,6 +37,10 @@ td.head{
 tr.link{
 	height:35px;
 	background-color:#303030;
+}
+td.profile{
+	width="100%"
+	text-align:left;
 }
 p#name{
 	color:#FF8000;
