--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ table#pc_contents{
 }
 table#phone_contents{
 	width:100%;
-	text-align:center;
 	border-collapse:collapse;
 	border-spacing:0;	
 }
@@ -66,6 +65,8 @@ table#phone_contents{
 	display: none;	
 }
 table#profile{
+	margin-left:auto;
+	margin-right:auto;
 	border-collapse:collapse;
 	border-spacing:0;	
 }
