--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ main{
 a:link { color: #ffffff; }
 a:visited { color: #ffffff; }
 a:hover { color: #ffffff; }
-a:active { color: #ffffff; }
+a:active { color: #ff8000; }
 
 table#max{
 	width:100%;
@@ -55,7 +55,7 @@ td.profile{
 	text-align:left;
 }
 p#name{
-	color:#FF8000;
+	color:#ff8000;
 	font-weight:bold;
 }
 
