--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ table#max{
 	width:100%;
 	table-layout:fixed;
 	border-collapse:collapse;
-	border-spacing:0;	
+	border-spacing:0;*/	
 }
 table#pc_contents{
 	width:100%;
@@ -34,8 +34,8 @@ table#phone_contents{
 }
 table#profile{
 	padding:0px 10px;
-	margin-left:auto;
-	margin-right:auto;
+	/*margin-left:auto;
+	margin-right:auto;*/
 	border-collapse:collapse;
 	border-spacing:0;	
 }
