--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ table#foot{
 
 main{
 	margin:0 auto;
-	/*width:60%;*/
-	width:1280px;
+	width:60%;
+	/*width:1280px;*/
 }
 table#phone_contents{
 	display: none;	
