--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ table#phone_contents{
 table#profile{
 	/*padding:0px 10px;*/
 	width:100%;
-	/*margin-left:auto;
-	margin-right:auto;*/
+	margin-left:auto;
+	margin-right:auto;
 	border-collapse:collapse;
 	border-spacing:0;	
 }
