--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ table#phone_contents{
 	border-spacing:0;	
 }
 table#profile{
-	/*padding:0px 10px;*/
-	width:100%;
+	/*padding:0px 10px;
+	width:100%;*/
 	margin-left:auto;
 	margin-right:auto;
 	border-collapse:collapse;
