--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ td.head{
 	padding:20px;
 	text-align:left;
 	font-size:72px;
-	font-weight: bolder;
+	font-weight: bold;
 }
 tr.link{
 	height:35px;
