--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ td.head{
 	padding:20px;
 	text-align:left;
 	font-size:72px;
-	/*font-weight: bold;*/
+	font-weight: bold;
+	font-style: italic;	
 }
 tr.link{
 	height:35px;
